--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @user.name %>のページ</h1>
 
 <p>メールアドレス: <%= @user.email %></p>
+
+<%= link_to '新しくブログを投稿する',new_post_path %>
+<%= link_to "ブログ一覧画面に戻る",posts_path %>
