--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @post, local: true, url: choose_new_or_edit ) do |form| %>
+<%= form_with(model: @posts, local: true, url: choose_new_or_edit ) do |form| %>
   <% if @post.errors.any? %>
    <div id="error_explanation">
     <h2><%= @post.errors.count %>件のエラーがあります！</h2>
@@ -11,15 +11,26 @@
    </div>
   <% end %>
     
+  <div class="post_field">
+    <%= form.label :image %>
+    <%= image_tag(@post.image.url) if @post.image && @post.image.url %>
+    <%= form.file_field :image %>
+    <%= form.hidden_field :image_cache %>
+  </div>
+
   <div class="post_title">
     <%= form.label :title %>
     <%= form.text_field :title %>
   </div>
+
   <div class="post_content">
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
+
+  <div class="actions">
   <%= form.submit %>
+  </div>
 <% end %>
 
 <%= link_to "ブログ一覧画面に戻る",posts_path %>
