--- a/app/views/posts/confirm.html.erb
+++ b/app/views/posts/confirm.html.erb
@@ -1,8 +1,12 @@
 <h3>以下の内容で、送信する</h3>
 
 <%= form_with(model: @post,url: posts_path,local: true) do |form| %>
+
+  <%= image_tag(@post.image.url) if @post.image && @post.image.url %>
+
   <%= form.hidden_field :title %>
   <%= form.hidden_field :content %>
+  <%= form.hidden_field :image_cache %>
 
   <p>タイトル: <%= @post.title %></p>
   <p>内容: <%= @post.content %></p>
