--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,13 @@
 <h1>ブログ詳細画面<h1>
 <p>タイトル: <%= @post.title %></p>
 <p>内容: <%= @post.content %></p>
+
+<p id= "notice"><%= notice %></p>
+
+<p>
+  <strong>Image:</strong>
+  <%= image_tag @post.image.url %>
+</p>
+
+<%= link_to 'Edit', edit_post_path(@post) %>
+<%= link_to 'Back', post_path %>
