--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @posts, local: true, url: choose_new_or_edit ) do |form| %>
+<%= form_with(model: @post, local: true, url:{action: 'confirm'} ) do |form| %>
   <% if @post.errors.any? %>
    <div id="error_explanation">
     <h2><%= @post.errors.count %>件のエラーがあります！</h2>
@@ -28,9 +28,7 @@
     <%= form.text_field :content %>
   </div>
 
-  <div class="actions">
   <%= form.submit %>
-  </div>
 <% end %>
 
 <%= link_to "ブログ一覧画面に戻る",posts_path %>
