--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,16 +14,21 @@
 <%= form_with(model: @user,local:true ) do |f| %>
   <%= f.label :"名前" %>
   <%= f.text_field :name %>
-
+<br>
   <%= f.label :"メールアドレス" %>
   <%= f.email_field :email %>
-
+<br>
+  <%= f.label :"プロフィール画像"%>
+  <%= image_tag(@user.image.url) if @user.image && @user.image.url %>
+  <%= f.file_field :image %>
+  <%= f.hidden_field :image_cache %>
+<br>
   <%= f.label :"パスワード" %>
   <%= f.password_field :password %>
-  
+<br>  
   <%= f.label :"パスワード(確認用)" %>
   <%= f.password_field :password_confirmation %>
-
+<br>
   <%= f.submit"アカウント作成" %>
-  
+<br>  
   <% end %>
