--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,5 +9,13 @@
   <%= image_tag @post.image.url %>
 </p>
 
+<% unless @post.user_id == current_user.id %>
+  <% if @favorite.present? %>
+    <%= link_to 'お気に入りを解除する', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
+  <% else %>
+    <%= link_to 'お気に入りにする', favorites_path(post_id: @post.id), method: :post, class: 'btn btn-primary' %>
+  <% end %>
+<% end %>
+
 <%= link_to '編集', edit_post_path(@post) %>
 <%= link_to '戻る', posts_path %>
