--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>ブログ一覧</h1>
+<h1>写真＆ブログ一覧</h1>
 
 <p><%= notice %></p>
 
@@ -14,14 +14,14 @@
         <td><%= post.content %></td>
 
         <td><%= link_to '詳細を確認する',post_path(post.id) %></td>
-        <td><%= link_to 'ブログを編集する',edit_post_path(post.id), data: {confirm: '本当に編集しますか？'} %></td>
-        <td><%= link_to 'ブログを削除する',post_path(post.id), method: :delete ,data: { confirm: '本当に削除しますか?'} %></td>
+        <td><%= link_to '写真＆ブログを編集する',edit_post_path(post.id), data: {confirm: '本当に編集しますか？'} %></td>
+        <td><%= link_to '写真＆ブログを削除する',post_path(post.id), method: :delete ,data: { confirm: '本当に削除しますか?'} %></td>
     </tr>
 <% end %>
 </table>
 
 <br>
 
-<%= link_to '新しくブログを投稿する',new_post_path %>
+<%= link_to '新しく写真＆ブログを投稿する',new_post_path %>
 
 
