--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+    <header>
+        <ul class="header-logo" >
+          <li>
+            <%= image_tag 'image1.jpeg', :size => '500x300'%>
+          </li>
+        </ul>
+  </header>
     <% flash.each do |key,value| %>
      <%= content_tag(:div, value, class:"#(key)")%>
     <% end %>
@@ -24,5 +31,12 @@
     <% end %>
 
     <%= yield %>
+    <footer>
+        <ul class="footer-logo" >
+          <li>
+            課題 写真共有アプリケーション
+          </li>
+        </ul>
+      </footer>
   </body>
 </html>
