--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <header>
         <ul class="header-logo" >
           <li>
-            <%= image_tag 'image1.jpeg', :size => '500x300'%>
+            <%= image_tag 'image1.jpg', :size => '500x300'%>
           </li>
         </ul>
   </header>
