--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,14 +4,17 @@
 
 <table>
     <tr>
+       <th>ユーザー名<th>
        <th>タイトル<th>
        <th>内容<th>
     </tr>
 
 <% @post.each do |post| %>
     <tr>
+        <td><%= post.user.name %></td>
         <td><%= post.title %></td>
         <td><%= post.content %></td>
+        
 
         <td><%= link_to '詳細を確認する',post_path(post.id) %></td>
         <td><%= link_to '写真＆ブログを編集する',edit_post_path(post.id), data: {confirm: '本当に編集しますか？'} %></td>
