お気に入り一覧実装途中

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,3 +11,4 @@
 
 <%= link_to '新しくブログを投稿する',new_post_path %>
 <%= link_to "ブログ一覧画面に戻る",posts_path %>
+<%= link_to "お気に入り一覧画面に戻る",favorites_path %>
