--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,10 +1,32 @@
 <h1>お気に入り一覧画面</h1>
 
-<% if @favorite_user.present? %>
-  <% @favorite_user.each do |favorite| %>
-    <%= post.name %>
-    <%= post.content %>
+<h2>ログインユーザー名:<%= @current_user.name %></h2>
+
+<p id="notice"><%= notice %></p>
+
+<h1><%= current_user.name %>のお気に入り一覧</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>お気に入り画像一覧</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @favorites.each do |favorite| %>
+      <tr>
+      <td>お気に入り画像</td>
+      <td><%= image_tag favorite.post.image.url %></td>
+      </tr>
     <% end %>
-<% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to '戻る', posts_path %>
+<%= link_to '新規投稿', new_post_path %>
 
 
